# HTML

./: index.html  index1.html  index10.html  index11.html  index12.html  index13.html  index14.html  index15.html  index16.html  index17.html  index18.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  index8.html  index9.html  pyproject.toml
company/: about.html
css/: styles.css  styles1.css  styles11.css  styles12.css  styles13.css  styles14.css  styles15.css  styles16.css  styles17.css  styles18.css
video/: index5.html
